<resources>
    <string name="app_name">TreePost</string>
    <string name="btn_post">Post</string>
    <string name="edit_msg_hint">Say something &#8230;</string>
    <string name="input_background">background image for input area</string>
    <string name="btn_reply">Send</string>
    <string name="edit_reply_hint">Reply &#8230;</string>
    <string name="user_avatar">User Avatar</string>
    <string name="title_treepost">Tree Post</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_me">Profile</string>
    <string name="logout_btn">Log Out</string>
    <string name="my_public_msg_label">My Public Messages</string>
    <string name="my_private_msg_label">My Private Messages</string>
    <string name="setting_label">Settings</string>
    <string name="avatar_label">Avatar</string>
    <string name="nickname_label">Nick Name</string>
    <string name="nickname_placeholder">Planters</string>
    <string name="more_label">More</string>
    <string name="email_label">Email</string>
    <string name="email_placeholder">plantersdev@gmail.com</string>
    <string name="personal_info_page_title">Account Info</string>
    <string name="save_btn">Save</string>
    <string name="messages_on_this_tree">Messages on this Tree</string>
</resources>
