<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/user_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/white_gb_with_bottom_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_profile_avatar_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:src="@drawable/default_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_avatar" />

        <TextView
            android:id="@+id/user_profile_name_tv"
            android:layout_width="121dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:text="@string/nickname_placeholder"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/user_profile_avatar_iv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_profile_email_tv"
            android:layout_width="189dp"
            android:layout_height="21dp"
            android:text="@string/email_placeholder"
            app:layout_constraintStart_toStartOf="@+id/user_profile_name_tv"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_name_tv" />

        <ImageButton
            android:id="@+id/user_profile_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fui_transparent"
            android:paddingTop="55dp"
            android:paddingBottom="55dp"
            android:scaleType="fitEnd"
            android:src="@drawable/right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/right_arrow"
            tools:srcCompat="@drawable/right_arrow" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/my_public_msg_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_gb_with_bottom_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_layout">

        <ImageButton
            android:id="@+id/my_public_msg_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fui_transparent"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:scaleType="fitEnd"
            android:src="@drawable/right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/right_arrow"
            tools:srcCompat="@drawable/right_arrow" />

        <TextView
            android:id="@+id/my_public_msg_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/my_public_msg_label"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/my_private_msg_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/white_gb_with_bottom_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_public_msg_layout">

        <ImageButton
            android:id="@+id/my_private_msg_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fui_transparent"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:scaleType="fitEnd"
            android:src="@drawable/right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/right_arrow"
            tools:srcCompat="@drawable/right_arrow" />

        <TextView
            android:id="@+id/my_private_msg_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/my_private_msg_label"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/setting_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_gb_with_bottom_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_private_msg_layout">

        <ImageButton
            android:id="@+id/setting_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fui_transparent"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:scaleType="fitEnd"
            android:src="@drawable/right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/right_arrow"
            tools:srcCompat="@drawable/right_arrow" />

        <TextView
            android:id="@+id/setting_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/setting_label"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>